fixup! squash! Bug 27476: Implement about:torconnect captive portal within Tor Browser
Bug 40872: switched blue-60 to --in-content-accent-color-active in
breadcrumbs items.

--- a/browser/components/torconnect/content/aboutTorConnect.css
+++ b/browser/components/torconnect/content/aboutTorConnect.css
@@ -46,7 +46,7 @@
 }
 
 .breadcrumb-item:hover {
-  color: var(--blue-60);
+  color: var(--in-content-accent-color-active);
 }
 
 .breadcrumb-separator {
@@ -70,7 +70,7 @@
 }
 
 #breadcrumbs .active {
-  color: var(--blue-60);
+  color: var(--in-content-accent-color-active);
 }
 
 #breadcrumbs .disabled, #breadcrumbs .disabled:hover {
